projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-multi-account/aws_configs/accounts/951601349076/us-east-1/TransitGatewayAttachments.json
{
 "TransitGatewayAttachments": [
  {
   "Association": {
    "State": "associated",
    "TransitGatewayRouteTableId": "tgw-rtb-0b2c8eeefcf19371b"
   },
   "CreationTime": "2020-04-28 22:22:25+00:00",
   "ResourceId": "vpc-08287a9084472b276",
   "ResourceOwnerId": "951601349076",
   "ResourceType": "vpc",
   "State": "available",
   "Tags": [
    {
     "Key": "Name",
     "Value": "tgw-att-fish"
    }
   ],
   "TransitGatewayAttachmentId": "tgw-attach-0f8397dbb9b9bce0d",
   "TransitGatewayId": "tgw-0efdeab79e9a8e490",
   "TransitGatewayOwnerId": "028403472736"
  }
 ]
}
