projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-multi-account/aws_configs/accounts/951601349076/us-east-1/Vpcs.json
{
 "Vpcs": [
  {
   "CidrBlock": "10.2.0.0/16",
   "CidrBlockAssociationSet": [
    {
     "AssociationId": "vpc-cidr-assoc-0e110c8a9c7c21ab5",
     "CidrBlock": "10.2.0.0/16",
     "CidrBlockState": {
      "State": "associated"
     }
    }
   ],
   "DhcpOptionsId": "dopt-aa2d83d0",
   "InstanceTenancy": "default",
   "IsDefault": false,
   "OwnerId": "951601349076",
   "State": "available",
   "Tags": [
    {
     "Key": "Name",
     "Value": "fish"
    }
   ],
   "VpcId": "vpc-08287a9084472b276"
  }
 ]
}
